crates/uitest/fixtures/ty_check/storage_map_ptr_requires_mut.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/storage_map_ptr_requires_mut.fe
---
error[8-0037]: effect `StorageMap<K, V, SALT>` must be mutable when calling `mut_ptr`
   ┌─ storage_map_ptr_requires_mut.fe:11:23
   │
11 │             let ptr = balances.mut_ptr(key: 1)
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^ `mut_ptr` requires `mut StorageMap<K, V, SALT>`
   │
   = use a mutable binding or pass a mutable reference in the `with` block
